Archive2/61/394f3701801b0c/output
main.cpp: In instantiation of 'struct A::register_type<M1>':
main.cpp:30:28:   required from here
main.cpp:23:13: error: invalid covariant return type for 'Mn* A::register_type<Mn>::foo() const [with Mn = M1]'
         Mn* foo() const
             ^
main.cpp:17:20: error:   overriding 'virtual M* A::register_type_base::foo() const'
         virtual M* foo() const = 0;
                    ^
